css and html ready to go

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ svg {
   align-items: center;
   justify-content: space-evenly;
   position: relative;
+  overflow: hidden;
 }
 
 .color h2 {
@@ -43,11 +44,14 @@ svg {
   display: flex;
   flex-direction: column;
   position: absolute;
-  background: rgb(192, 177, 179);
+  bottom: 0%;
+  background: rgb(255, 255, 255);
+  opacity: 0;
   padding: 1rem;
   width: 80%;
   border-top-right-radius: 1rem;
   border-top-left-radius: 1rem;
+  pointer-events: none;
   /* We are adding adjustment class*/
   transform: translateY(100px);
   transition: all 0.5s ease-in-out;
