--- a/style.css
+++ b/style.css
@@ -46,15 +46,15 @@ svg {
   position: absolute;
   bottom: 0%;
   background: rgb(255, 255, 255);
-  opacity: 0;
+  /* opacity: 0; */
   padding: 1rem;
   width: 80%;
   border-top-right-radius: 1rem;
-  
+
   border-top-left-radius: 1rem;
-  pointer-events: none;
+  /* pointer-events: none; */
   /* We are adding adjustment class*/
-  transform: translateY(100px);
+  /* transform: translateY(100px); */
   transition: all 0.5s ease-in-out;
 }
 
@@ -124,4 +124,14 @@ svg {
   background: none;
   cursor: pointer;
   margin: 2rem 0rem;
+}
+
+/* Slider stuff */
+
+input[type="range"] {
+  -webkit-appearance: none;
+  margin: 1rem 0rem;
+  width: 100%;
+  position: relative;
+  cursor: pointer;
 }
